...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <LinearLayout
        android:id="@+id/fragment_account_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/label_account_name"
                android:inputType="textCapWords"
                android:maxLength="255"
...
                android:ems="15"
                android:hint="@string/hint_description"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/checkbox_parent_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_row_bottom_margin"
            android:minHeight="40dp"
            android:text="@string/label_parent_account" />

        <Spinner
            android:id="@+id/input_parent_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_account_type" />

            <Spinner
                android:id="@+id/input_account_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_padding"
                android:minHeight="40dp" />
        </LinearLayout>

...
                android:layout_height="wrap_content"
                android:hint="@string/hint_notes"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/placeholder_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_row_bottom_margin"
            android:text="@string/label_placeholder_account" />

        <CheckBox
...
