...
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:locale="en">
    <string name="title_create_account">Create Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="description_view_account_icon">View account details</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    <string name="label_passcode">Enter Passcode</string>
...
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_debit">Debit</string>
    <string name="label_credit">Credit</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="title_delete_account">Delete Account</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Add note</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_account_balance">Balance:</string>
...
    <string name="wizard_option_import_my_accounts">Import my accounts</string>
    <string name="wizard_option_let_me_handle_it">Let me handle it</string>
    <string name="wizard_option_currency_other">Other…</string>
    <string name="wizard_option_auto_send_crash_reports">Automatically send crash reports</string>
    <string name="wizard_option_disable_crash_reports">Disable crash reports</string>
    <string name="wizard_btn_back">Back</string>
    <string name="title_setup_gnucash">Setup GnuCash</string>
    <string name="wizard_title_welcome_to_gnucash">Welcome to GnuCash</string>
    <string name="msg_wizard_welcome_page">Before you dive in,\nlet\'s setup a few things first\n\nTo continue, press Next</string>
    <string name="title_split_editor">Split Editor</string>
    <string name="toast_error_check_split_amounts">Check that all splits have valid amounts before saving!</string>
    <string name="label_error_invalid_expression">Invalid expression!</string>
    <string name="toast_scheduled_recurring_transaction">Scheduled recurring transaction</string>
...
    <string name="hint_converted_amount">Converted Amount</string>
    <string name="title_report_sheet">Sheet</string>
    <string name="label_last_3_months_expenses">Expenses for last 3 months</string>
    <string name="label_total_assets">Total Assets</string>
    <string name="label_total_liabilities">Total Liabilities</string>
    <string name="label_net_worth">Net Worth</string>
    <string name="label_assets">Assets</string>
    <string name="label_liabilities">Liabilities</string>
    <string name="label_equity">Equity</string>
    <string name="label_move_to">Move to:</string>
    <string name="menu_group_by">Group By</string>
    <string name="menu_group_by_month">Month</string>
    <string name="menu_group_by_quarter">Quarter</string>
...
